platform/stack/packages/observability/opencost/manifests/install.yaml
# OPENCOST INSTALL RESOURCES
# This file is auto-generated with 'platform/stack/packages/observability/opencost/generate-manifests.sh'
---
# Source: opencost/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencost
  namespace: adhar-system
  labels:
    helm.sh/chart: opencost-2.5.30
    app.kubernetes.io/name: opencost
    app.kubernetes.io/instance: opencost
    app.kubernetes.io/version: "1.121.1"
    app.kubernetes.io/part-of: opencost
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: opencost
    app.kubernetes.io/instance: opencost
  type: "ClusterIP"
  ports:
    - name: http
      port: 9003
      targetPort: 9003
    - name: mcp-server
      port: 8081
      targetPort: 8081
    - name: http-ui
      port: 9090
      targetPort: 9090
---
# Source: opencost/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencost
  namespace: adhar-system
  labels:
    helm.sh/chart: opencost-2.5.30
    app.kubernetes.io/name: opencost
    app.kubernetes.io/instance: opencost
    app.kubernetes.io/version: "1.121.1"
    app.kubernetes.io/part-of: opencost
    app.kubernetes.io/managed-by: Helm
  annotations:
    checksum/configs: 8a1f56b2d45f362c4201479add5be5b6838b63bdd28c418c38a59355a3f3e684
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opencost
      app.kubernetes.io/instance: opencost
  strategy: 
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opencost
        app.kubernetes.io/instance: opencost
    spec:
      serviceAccountName: opencost
      automountServiceAccountToken: true
      containers:
        - name: opencost
          image: ghcr.io/opencost/opencost:1.121.1@sha256:50052694785db32174332670920faf7b7f55d32a91ba3caec1e9207a58338ff5
          imagePullPolicy: IfNotPresent
          args:
          ports:
            - containerPort: 9003
              name: http
            - containerPort: 8081
              name: mcp-server
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 55Mi
          startupProbe:
            httpGet:
              path: /healthz
              port: 9003
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 30
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9003
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9003
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
            successThreshold: 1
        - name: opencost-ui
          image: ghcr.io/opencost/opencost-ui:1.121.1@sha256:a2eaa7f585f418deba878e81cf571bdcb7ead07becf18a158138e2a39d28dc5c
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              name: http-ui
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 55Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: opencost-ui-nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.nginx.conf
              subPath: default.nginx.conf
      volumes:
        - name: opencost-ui-nginx-config-volume
          configMap:
            name: opencost-ui-nginx-config
            items:
              - key: nginx.conf
                path: default.nginx.conf
