platform/stack/packages/observability/opencost/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencost
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "100"
    nginx.ingress.kubernetes.io/rewrite-target: /opencost/$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: "nginx"
  rules:
    - host: adhar.localtest.me
      http:
        paths:
          - path: /opencost(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: opencost
                port:
                  name: http-ui
